--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,5 +13,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tc2007b"
-        tools:targetApi="31" />
+        tools:targetApi="31">
+
+        <activity
+            android:name=".framework.views.activities.MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Tc2007b.NoActionBar"
+            android:screenOrientation="portrait" />
+</application>
+
 </manifest>
